# Configurinator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
Main/: CMakeLists.txt
Main/src/: Backend.ixx  Frontend.ixx  Model.ixx  ParseArguments.ixx  include.h  main.cpp  the_shared_mem_defines.hpp
Main/src/Backend/: Backend.ixx
Main/src/Frontend/: CustomComponents.ixx  Frontend.ixx
Main/src/ParseArguments/: ParseAndProcessArgs.ixx  ParseArguments.ixx
examples/scripts-dir/: file.py  file_two.py  runasadmin.py
~scripts/: functions.cmake
~vendor/: vcpkg.json
~vendor/include/: common.h  helpers.hpp
